--- a/charts/matrix-stack/templates/synapse/synapse_service_monitor.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_service_monitor.yaml
@@ -22,7 +22,7 @@ spec:
     relabelings:
     - targetLabel: instance
       action: replace
-      replacement: {{ .ingress.host }}
+      replacement: {{ tpl .ingress.host $ }}
   selector:
     matchLabels:
       app.kubernetes.io/part-of: matrix-stack
