--- a/charts/matrix-stack/templates/synapse/synapse_http_service.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_http_service.yaml
@@ -14,7 +14,7 @@ metadata:
   name: {{ $.Release.Name }}-synapse-haproxy
   namespace: {{ $.Release.Namespace }}
 spec:
-  type: {{ .ingress.service.type }}
+  type: {{ .ingress.service.type | default $.Values.ingress.service.type }}
   ports:
   - name: haproxy-http
     port: 8008
