--- a/charts/matrix-stack/templates/synapse/synapse_ingress.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_ingress.yaml
@@ -9,24 +9,14 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-{{- with .ingress.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-{{- end }}
+{{- include "element-io.ess-library.ingress.annotations" (dict "root" $ "context" .ingress.annotations) | nindent 2 }}
   labels:
     {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse
   namespace: {{ $.Release.Namespace }}
 spec:
-{{- if .ingress.tlsSecret }}
-  tls:
-  - hosts:
-    - {{ (tpl .ingress.host $) | quote }}
-    secretName: {{  (tpl .ingress.tlsSecret $) | quote }}
-{{- end }}
-{{- with .ingress.className }}
-  ingressClassName: {{ . | quote }}
-{{- end }}
+{{- include "element-io.ess-library.ingress.tlsSecret" (dict "root" $ "context" (dict "hosts" (list (required "synapse.ingress.host is required" .ingress.host)) "tlsSecret" .ingress.tlsSecret)) | nindent 2 }}
+{{- include "element-io.ess-library.ingress.className" (dict "root" $ "context" .ingress.className) | nindent 2 }}
   rules:
   - host: {{ (tpl .ingress.host $) | quote }}
     http:
@@ -76,4 +66,3 @@ spec:
 {{- end }}
 {{- end -}}
 {{- end -}}
-
