synapse: prefix user provided additional config keys

--- a/charts/matrix-stack/templates/synapse/synapse_secret.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret.yaml
@@ -18,7 +18,7 @@ data:
 {{- range $key := (. | keys | uniq | sortAlpha) }}
 {{- $prop := index $.Values.synapse.additional $key }}
 {{- if $prop.config }}
-  {{ $key }}: {{ $prop.config | b64enc }}
+  user-{{ $key }}: {{ $prop.config | b64enc }}
 {{- end }}
 {{- end }}
 {{- end }}
