tests: verify synapse additional option

--- a/charts/matrix-stack/ci/pytest-synapse-values.yaml
+++ b/charts/matrix-stack/ci/pytest-synapse-values.yaml
@@ -11,8 +11,8 @@ synapse:
         push:
           jitter_dalay: 10
     01-other-user-config.yaml:
-      configSecret:  "{{ $.Release.Name }}-ess-secrets"
-      configSecretKey: "01-other-config.yaml"
+      configSecret: "{{ $.Release.Name }}-synapse-secrets"
+      configSecretKey: "01-other-user-config.yaml"
 
   registrationSharedSecret:
     secret: "{{ $.Release.Name }}-ess-secrets"
