Add initial manifest test ensuring that we have setup all components correctly for further testing

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -120,3 +120,6 @@ jobs:
             checkov -d "$subchart" --framework helm --var-file "$checkov_values" --quiet
           done
         done
+
+    - name: Run our manifest tests
+      run: poetry run pytest tests/manifests
