--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -93,6 +93,7 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v2
       with:
+        draft: true
         generate_release_notes: true
         files: charts/matrix-stack/matrix-stack*.tgz*
         fail_on_unmatched_files: true
