Make it possible to reuse the test cluster for pytests

--- a/charts/matrix-stack/ci/test-cluster-mixin.yaml
+++ b/charts/matrix-stack/ci/test-cluster-mixin.yaml
@@ -10,6 +10,32 @@ elementWeb:
   ingress:
     tlsSecret: ess-selfsigned
 
+  tolerations:
+  - key: context
+    operator: Equal
+    value: pytest
+    effect: NoSchedule
+
 synapse:
   ingress:
     tlsSecret: ess-selfsigned
+
+  tolerations:
+  - key: context
+    operator: Equal
+    value: pytest
+    effect: NoSchedule
+
+  haproxy:
+    tolerations:
+    - key: context
+      operator: Equal
+      value: pytest
+      effect: NoSchedule
+
+  redis:
+    tolerations:
+    - key: context
+      operator: Equal
+      value: pytest
+      effect: NoSchedule
