--- a/tests/integration/fixtures/files/clusters/kind.yml
+++ b/tests/integration/fixtures/files/clusters/kind.yml
@@ -4,7 +4,7 @@
 
 apiVersion: kind.x-k8s.io/v1alpha4
 kind: Cluster
-name: pytest-ess
+name: ess-helm
 nodes:
 - role: control-plane
   kubeadmConfigPatches:
@@ -23,4 +23,4 @@ nodes:
 containerdConfigPatches:
 - |-
   [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5000"]
-    endpoint = ["http://pytest-ess-registry:5000"]
+    endpoint = ["http://registry:5000"]
