Put Synapse data in Synapse Secrets not in ESSData

--- a/charts/matrix-stack/ci/pytest-synapse-values.yaml
+++ b/charts/matrix-stack/ci/pytest-synapse-values.yaml
@@ -15,13 +15,13 @@ synapse:
       configSecretKey: "01-other-user-config.yaml"
 
   registrationSharedSecret:
-    secret: "{{ $.Release.Name }}-ess-secrets"
+    secret: "{{ $.Release.Name }}-synapse-secrets"
     secretKey: registrationSharedSecret
   macaroon:
-    secret: "{{ $.Release.Name }}-ess-secrets"
+    secret: "{{ $.Release.Name }}-synapse-secrets"
     secretKey: macaroon
   signingKey:
-    secret: "{{ $.Release.Name }}-ess-secrets"
+    secret: "{{ $.Release.Name }}-synapse-secrets"
     secretKey: signingKey
 
   postgres:
