Synapse: remove unneeded brackets

--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -104,9 +104,9 @@ We have an init container to render & merge the config for several reasons:
                  These could be done as env vars with valueFrom.secretKeyRef, but that triggers CKV_K8S_35.
                  If we wanted to allow for replacement of values in the user-provided config with external Secrets we could extend this init-container
                  to allow extraEnv with valueFrom.secretKeyRef. */}}
-          export SYNAPSE_MACAROON=$(cat /secrets/{{ (tpl (.macaroon.secret | default (printf "%s-synapse" $.Release.Name)) $) }}/{{ .macaroon.secretKey | default "MACAROON" }});
-          export SYNAPSE_POSTGRES_PASSWORD=$(cat /secrets/{{ (tpl (.postgres.password.secret | default (printf "%s-synapse" $.Release.Name)) $) }}/{{ .postgres.password.secretKey | default "POSTGRES_PASSWORD" }});
-          export SYNAPSE_REGISTRATION_SHARED_SECRET=$(cat /secrets/{{ (tpl (.registrationSharedSecret.secret | default (printf "%s-synapse" $.Release.Name)) $) }}/{{ .registrationSharedSecret.secretKey | default "REGISTRATION_SHARED_SECRET" }});
+          export SYNAPSE_MACAROON=$(cat /secrets/{{ tpl (.macaroon.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .macaroon.secretKey | default "MACAROON" }});
+          export SYNAPSE_POSTGRES_PASSWORD=$(cat /secrets/{{ tpl (.postgres.password.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .postgres.password.secretKey | default "POSTGRES_PASSWORD" }});
+          export SYNAPSE_REGISTRATION_SHARED_SECRET=$(cat /secrets/{{ tpl (.registrationSharedSecret.secret | default (printf "%s-synapse" $.Release.Name)) $ }}/{{ .registrationSharedSecret.secretKey | default "REGISTRATION_SHARED_SECRET" }});
 
           set -x;
           export APPLICATION_NAME=$(hostname -s | sed 's/.*-synapse-//g');
