Synapse: minor nit

--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -268,5 +268,5 @@ We have an init container to render & merge the config for several reasons:
 ---
 {{- end }}
 {{- end }}
-{{- end -}}
+{{- end }}
 {{- end -}}
