--- a/charts/matrix-stack/templates/element-web/deployment.yaml
+++ b/charts/matrix-stack/templates/element-web/deployment.yaml
@@ -62,10 +62,7 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
 {{- end }}
-{{- with .tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-{{- end }}
+{{- include "element-io.ess-library.pods.tolerations" (dict "root" $ "context" .tolerations) | indent 6 }}
 {{- include "element-io.ess-library.pods.topologySpreadConstraints" (dict "root" $ "context" (dict "instanceSuffix" "element-web" "deployment" true "topologySpreadConstraints" .topologySpreadConstraints)) | indent 6 }}
       containers:
       - name: element-web
