Switch seccompProfile from container to Pod securityContext and add tests

--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -146,8 +146,8 @@ elementWeb:
     ## To set the Seccomp profile for a Container, include the seccompProfile field in the securityContext section of your Pod or Container manifest.
     ## The seccompProfile field is a SeccompProfile object consisting of type and localhostProfile. Valid options for type include RuntimeDefault, Unconfined, and Localhost.
     ## localhostProfile must only be set set if type Localhost. It indicates the path of the pre-configured profile on the node, relative to the kubelet's configured Seccomp profile location (configured with the --root-dir flag).
-    seccompProfile:
-      type: RuntimeDefault
+    # seccompProfile:
+    #  type: RuntimeDefault
   ## NodeSelector is a selector which must be true for the pod to fit on a node. Selector which must match a node's labels for the pod to be scheduled on that node. More info: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
   # nodeSelector: {}
   ## A subset of PodSecurityContext. PodSecurityContext holds pod-level security attributes and common container settings
@@ -193,9 +193,9 @@ elementWeb:
     ## The seccompProfile field is a SeccompProfile object consisting of type and localhostProfile.
     ## Valid options for type include RuntimeDefault, Unconfined, and Localhost. localhostProfile must only be set set if type Localhost.
     ## It indicates the path of the pre-configured profile on the node, relative to the kubelet's configured Seccomp profile location (configured with the --root-dir flag).
-    # seccompProfile:
+    seccompProfile:
       # localhostProfile:
-      # type:
+      type: RuntimeDefault
 
     ## A list of groups applied to the first process run in each container, in addition to the container's primary GID.
     ## If unspecified, no groups will be added to any container.
@@ -587,8 +587,8 @@ synapse:
     ## To set the Seccomp profile for a Container, include the seccompProfile field in the securityContext section of your Pod or Container manifest.
     ## The seccompProfile field is a SeccompProfile object consisting of type and localhostProfile. Valid options for type include RuntimeDefault, Unconfined, and Localhost.
     ## localhostProfile must only be set set if type Localhost. It indicates the path of the pre-configured profile on the node, relative to the kubelet's configured Seccomp profile location (configured with the --root-dir flag).
-    seccompProfile:
-      type: RuntimeDefault
+    # seccompProfile:
+    #  type: RuntimeDefault
   ## Defines additional environment variables to be injected onto this workload
   ## e.g.
   ## extraEnv:
@@ -652,9 +652,9 @@ synapse:
     ## The seccompProfile field is a SeccompProfile object consisting of type and localhostProfile.
     ## Valid options for type include RuntimeDefault, Unconfined, and Localhost. localhostProfile must only be set set if type Localhost.
     ## It indicates the path of the pre-configured profile on the node, relative to the kubelet's configured Seccomp profile location (configured with the --root-dir flag).
-    # seccompProfile:
+    seccompProfile:
       # localhostProfile:
-      # type:
+      type: RuntimeDefault
 
     ## A list of groups applied to the first process run in each container, in addition to the container's primary GID.
     ## If unspecified, no groups will be added to any container.
@@ -766,8 +766,8 @@ synapse:
       ## To set the Seccomp profile for a Container, include the seccompProfile field in the securityContext section of your Pod or Container manifest.
       ## The seccompProfile field is a SeccompProfile object consisting of type and localhostProfile. Valid options for type include RuntimeDefault, Unconfined, and Localhost.
       ## localhostProfile must only be set set if type Localhost. It indicates the path of the pre-configured profile on the node, relative to the kubelet's configured Seccomp profile location (configured with the --root-dir flag).
-      seccompProfile:
-        type: RuntimeDefault
+      # seccompProfile:
+      #  type: RuntimeDefault
     ## NodeSelector is a selector which must be true for the pod to fit on a node. Selector which must match a node's labels for the pod to be scheduled on that node. More info: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
     # nodeSelector: {}
     ## A subset of PodSecurityContext. PodSecurityContext holds pod-level security attributes and common container settings
@@ -813,9 +813,9 @@ synapse:
       ## The seccompProfile field is a SeccompProfile object consisting of type and localhostProfile.
       ## Valid options for type include RuntimeDefault, Unconfined, and Localhost. localhostProfile must only be set set if type Localhost.
       ## It indicates the path of the pre-configured profile on the node, relative to the kubelet's configured Seccomp profile location (configured with the --root-dir flag).
-      # seccompProfile:
+      seccompProfile:
         # localhostProfile:
-        # type:
+        type: RuntimeDefault
 
       ## A list of groups applied to the first process run in each container, in addition to the container's primary GID.
       ## If unspecified, no groups will be added to any container.
@@ -926,8 +926,8 @@ synapse:
       ## To set the Seccomp profile for a Container, include the seccompProfile field in the securityContext section of your Pod or Container manifest.
       ## The seccompProfile field is a SeccompProfile object consisting of type and localhostProfile. Valid options for type include RuntimeDefault, Unconfined, and Localhost.
       ## localhostProfile must only be set set if type Localhost. It indicates the path of the pre-configured profile on the node, relative to the kubelet's configured Seccomp profile location (configured with the --root-dir flag).
-      seccompProfile:
-        type: RuntimeDefault
+      # seccompProfile:
+      #  type: RuntimeDefault
     ## NodeSelector is a selector which must be true for the pod to fit on a node. Selector which must match a node's labels for the pod to be scheduled on that node. More info: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
     # nodeSelector: {}
     ## A subset of PodSecurityContext. PodSecurityContext holds pod-level security attributes and common container settings
@@ -973,9 +973,9 @@ synapse:
       ## The seccompProfile field is a SeccompProfile object consisting of type and localhostProfile.
       ## Valid options for type include RuntimeDefault, Unconfined, and Localhost. localhostProfile must only be set set if type Localhost.
       ## It indicates the path of the pre-configured profile on the node, relative to the kubelet's configured Seccomp profile location (configured with the --root-dir flag).
-      # seccompProfile:
+      seccompProfile:
         # localhostProfile:
-        # type:
+        type: RuntimeDefault
 
       ## A list of groups applied to the first process run in each container, in addition to the container's primary GID.
       ## If unspecified, no groups will be added to any container.
