integration: verify service monitors networking

--- a/charts/matrix-stack/ci/pytest-element-web-values.yaml
+++ b/charts/matrix-stack/ci/pytest-element-web-values.yaml
@@ -11,6 +11,9 @@ elementWeb:
 
   replicas: 1
 
+  annotations:
+    has-no-service-monitor: "true"
+
   additional:
     {
       "default_server_config": {
