--- a/charts/matrix-stack/ci/pytest-synapse-values.yaml
+++ b/charts/matrix-stack/ci/pytest-synapse-values.yaml
@@ -36,6 +36,9 @@ synapse:
     host: synapse.{{ $.Values.serverName }}
     tlsSecret: "{{ $.Release.Name }}-synapse-web-tls"
 
+  redis:
+    annotations:
+      has-no-service-monitor: "true"
   workers:
     sliding-sync:
       enabled: true
