pytest: name failure artifacts after matrix component

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -66,6 +66,6 @@ jobs:
       if: ${{ failure() }}
       uses: actions/upload-artifact@v4
       with:
-        name: ess-helm-logs
+        name: ess-helm-logs-${{ matrix.test-component }}
         path: ess-helm-logs
         retention-days: 1
