ESS Library: replace per-component helpers with one in ess-library

--- a/charts/matrix-stack/templates/element-web/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/element-web/serviceaccount.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
   labels:
     {{- include "element-io.element-web.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.element-web.serviceAccountName" (dict "root" $ "context" .) }}
+  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "element-web")) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
