--- a/charts/matrix-stack/templates/synapse/haproxy_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/haproxy_serviceaccount.yaml
@@ -17,11 +17,10 @@ metadata:
   {{- end }}
   labels:
     {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.synapse.haproxy.serviceAccountName" (dict "root" $ "context" .) }}
+  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse-haproxy")) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
 {{- end -}}
 {{- end -}}
 {{- end -}}
-
