--- a/charts/matrix-stack/templates/synapse/redis_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/redis_serviceaccount.yaml
@@ -18,7 +18,7 @@ metadata:
   {{- end }}
   labels:
     {{- include "element-io.synapse.redis.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.synapse.redis.serviceAccountName" (dict "root" $ "context" .) }}
+  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse-redis")) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
@@ -26,4 +26,3 @@ automountServiceAccountToken: false
 {{- end -}}
 {{- end -}}
 {{- end -}}
-
