--- a/charts/matrix-stack/templates/synapse/synapse_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_serviceaccount.yaml
@@ -16,10 +16,9 @@ metadata:
   {{- end }}
   labels:
     {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.synapse.serviceAccountName" (dict "root" $ "context" .) }}
+  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse")) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
 {{- end -}}
 {{- end -}}
-
