--- a/charts/matrix-stack/templates/element-web/deployment.yaml
+++ b/charts/matrix-stack/templates/element-web/deployment.yaml
@@ -52,7 +52,7 @@ spec:
               topologyKey: kubernetes.io/hostname
 {{- end }}
       automountServiceAccountToken: false
-      serviceAccountName: {{ include "element-io.element-web.serviceAccountName" (dict "root" $ "context" .) }}
+      serviceAccountName: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "element-web")) }}
 {{- include "element-io.ess-library.pods.pullSecrets" (dict "root" $ "context" .image) | indent 6 }}
 {{- with .podSecurityContext }}
       securityContext:
