Synapse: name redis and haproxy label named templates with dashes so they match the resources created

--- a/charts/matrix-stack/templates/synapse/haproxy_configmap.yaml
+++ b/charts/matrix-stack/templates/synapse/haproxy_configmap.yaml
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
+    {{- include "element-io.synapse-haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse-haproxy
   namespace: {{ $.Release.Namespace }}
 data:
