--- a/charts/matrix-stack/templates/synapse/haproxy_deployment.yaml
+++ b/charts/matrix-stack/templates/synapse/haproxy_deployment.yaml
@@ -16,7 +16,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
 {{- end }}
   labels:
-    {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse-haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
     k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/synapse/haproxy_configmap.yaml") $ | sha1sum }}"
   name: {{ $.Release.Name }}-synapse-haproxy
   namespace: {{ $.Release.Namespace }}
@@ -33,7 +33,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .) | nindent 8 }}
+        {{- include "element-io.synapse-haproxy.labels" (dict "root" $ "context" .) | nindent 8 }}
         k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/synapse/haproxy_configmap.yaml") $ | sha1sum }}"
 {{- with .annotations }}
       annotations:
