--- a/charts/matrix-stack/templates/synapse/redis_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/redis_serviceaccount.yaml
@@ -17,7 +17,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "element-io.synapse.redis.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse-redis.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse-redis")) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
