--- a/charts/matrix-stack/templates/synapse/haproxy_service_monitor.yaml
+++ b/charts/matrix-stack/templates/synapse/haproxy_service_monitor.yaml
@@ -13,7 +13,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse-haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse-haproxy
   namespace: {{ $.Release.Namespace }}
 spec:
@@ -30,4 +30,3 @@ spec:
 {{- end -}}
 {{- end -}}
 {{- end -}}
-
