--- a/charts/matrix-stack/templates/synapse/haproxy_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/haproxy_serviceaccount.yaml
@@ -16,7 +16,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse-haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse-haproxy")) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
