--- a/charts/matrix-stack/templates/synapse/redis_service.yaml
+++ b/charts/matrix-stack/templates/synapse/redis_service.yaml
@@ -12,7 +12,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.synapse.redis.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse-redis.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse-redis
   namespace: {{ $.Release.Namespace }}
 spec:
