--- a/charts/matrix-stack/templates/synapse/synapse_http_service.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_http_service.yaml
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
+    {{- include "element-io.synapse-haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse-haproxy
   namespace: {{ $.Release.Namespace }}
 spec:
