ESS Library: unify ServiceAccount construction

--- a/charts/matrix-stack/templates/element-web/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/element-web/serviceaccount.yaml
@@ -5,19 +5,6 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 {{- with .Values.elementWeb -}}
 {{- if .enabled -}}
-{{- if .serviceAccount.create }}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  {{- with .serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-  labels:
-    {{- include "element-io.element-web.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "element-web")) }}
-  namespace: {{ $.Release.Namespace }}
-automountServiceAccountToken: false
-{{- end }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "element-web")) }}
 {{- end }}
 {{- end }}
