--- a/charts/matrix-stack/templates/synapse/haproxy_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/haproxy_serviceaccount.yaml
@@ -7,20 +7,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- with .Values.synapse -}}
 {{- if .enabled -}}
 {{- with .haproxy -}}
-{{- if .serviceAccount.create }}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  {{- with .serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-  labels:
-    {{- include "element-io.synapse-haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse-haproxy")) }}
-  namespace: {{ $.Release.Namespace }}
-automountServiceAccountToken: false
-{{- end }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "synapse-haproxy")) }}
 {{- end -}}
 {{- end -}}
 {{- end -}}
