--- a/charts/matrix-stack/templates/synapse/redis_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/redis_serviceaccount.yaml
@@ -8,20 +8,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- if .enabled -}}
 {{- if (include "element-io.synapse.enabledWorkers" (dict "root" $)) | fromJson }}
 {{- with .redis -}}
-{{- if .serviceAccount.create }}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  {{- with .serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-  labels:
-    {{- include "element-io.synapse-redis.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse-redis")) }}
-  namespace: {{ $.Release.Namespace }}
-automountServiceAccountToken: false
-{{- end }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "synapse-redis")) }}
 {{- end }}
 {{- end -}}
 {{- end -}}
