--- a/charts/matrix-stack/templates/synapse/haproxy_deployment.yaml
+++ b/charts/matrix-stack/templates/synapse/haproxy_deployment.yaml
@@ -54,19 +54,7 @@ spec:
                   - "{{ $.Release.Name }}-synapse-haproxy"
               topologyKey: kubernetes.io/hostname
 {{- end }}
-      automountServiceAccountToken: false
-      serviceAccountName: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse-haproxy")) }}
-{{- include "element-io.ess-library.pods.pullSecrets" (dict "root" $ "context" .image) | nindent 6 }}
-{{- with .podSecurityContext }}
-      securityContext:
-        {{- toYaml . | nindent 8 }}
-{{- end }}
-{{- with .nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-{{- end }}
-{{- include "element-io.ess-library.pods.tolerations" (dict "root" $ "context" .tolerations) | indent 6 }}
-{{- include "element-io.ess-library.pods.topologySpreadConstraints" (dict "root" $ "context" (dict "instanceSuffix" "synapse-haproxy" "deployment" true "topologySpreadConstraints" .topologySpreadConstraints)) | indent 6 }}
+{{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "key" "synapse-haproxy" "deployment" true)) | nindent 6 }}
       containers:
       - name: haproxy
 {{- with .image -}}
